# fastapi-hypermedia

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/app/: Dockerfile  README.md  alembic.ini  config.py  database.py  dependencies.py  docker-compose.yml  domestic.db  main.py  models.py  pyproject.toml  repository.py  requirements.txt  services.py
examples/app/alembic/: env.py
examples/app/alembic/versions/: 5e69b646c757_switch_to_sqlite.py  a1cda0f5b0f9_initial_migration.py
examples/app/core/: html_renderer.py  representor.py  security.py
examples/app/db_models/: __init__.py  enums.py  task.py  task_definition.py  workflow.py
examples/app/infrastructure/: docker-compose.yml
examples/app/routers/: auth.py  root.py  workflow_definitions.py  workflow_instances.py
examples/app/schemas/: hypermedia.py
fastapi_hypermedia/: __init__.py  cj_models.py  html_generator.py  hypermedia.py  responses.py  templating.py  transitions.py
fastapi_hypermedia/templates/: base.html  cj_template.html  future.html
src/core/: representor.py
src/fastapi_hypermedia/: templating.py  transitions.py
src/routers/: workflow_definitions.py
tests/: conftest.py
tests/acceptance/: test_html_rendering.py  test_hypermedia_api_scenarios.py  test_improved_dx.py  test_transition_discovery.py
tests/helpers/: cj_validator.py  html_validator.py
