[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-hypermedia"
version = "0.1.0"
description = "A FastAPI extension for building hypermedia APIs with Collection+JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dominate>=2.9.1",
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.5",
]

[project.optional-dependencies]
app = [
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.28.1",
    "pyjwt>=2.10.1",
    "jsonschema>=4.23.0",
    "beautifulsoup4>=4.12.3",
]

[tool.hatchling]
packages = ["fastapi_hypermedia"]

[tool.pytest]
asyncio_mode = "auto"
pythonpath = ["."]

#[tool.uv]
#package = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.uv.workspace]
members = [
    "examples/app",
    ".",
]
