[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-hypermedia"
version = "0.1.0"
description = "A FastAPI extension for building hypermedia APIs with Collection+JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.5",
]

[project.optional-dependencies]
app = [
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.28.1",
    "pyjwt>=2.10.1",
    "jsonschema>=4.23.0",
    "beautifulsoup4>=4.12.3",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "pytest-asyncio>=0.24.0",
    "types-requests",
    "types-PyYAML",
    "sqlalchemy>=2.0.41",
]

[tool.hatchling]
packages = ["fastapi_hypermedia"]
include = ["fastapi_hypermedia/templates/**/*"]

[tool.pytest.ini_options]
addopts = "--cov=fastapi_hypermedia --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.uv.workspace]
members = [
    "examples/app",
    ".",
]
