[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.12",
    "alembic>=1.16.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "pydantic-settings>=2.0.0",
    "fastapi-hypermedia",
]

[tool.uv.sources]
fastapi-hypermedia = { workspace = true }
